terraform/modules/networking/firewall.tf
resource "google_compute_firewall" "allow_iap_ssh" {
  name = "allow-iap-ssh"
  network = google_compute_network.vpc.name
    allow {
        protocol = "tcp"
        ports = ["22"]
    }

    source_ranges = ["35.235.240.0/20"]
}

resource "google_compute_firewall" "allow_http" {
  name = "allow-http"
  network = google_compute_network.vpc.name
    allow {
        protocol = "tcp"
        ports = ["80"]
    }

    source_ranges = ["0.0.0.0/0"]
}

resource "google_compute_firewall" "allow_https" {
  name = "allow-https"
  network = google_compute_network.vpc.name
    allow {
        protocol = "tcp"
        ports = ["443"]
    }

    source_ranges = ["0.0.0.0/0"]
}
